--- a/Meeting/MIDI.js-master/examples/violin14.html
+++ b/Meeting/MIDI.js-master/examples/violin14.html
@@ -1632,6 +1632,7 @@ function Lamp(lampId) {
 		sphereLight.material.color=new THREE.Color( 0xff0000 );
 	
 	}
+	
 	//makeLight(13,10,0,light2);
 	//makeLight(16,10,0,light3);
 	//makeLight(19,10,0,light4);
@@ -1665,7 +1666,12 @@ function bpmLamp(){
 		//lampi=lampi%4;
 
 	}
-
+	if(lampi>0){
+		scene.remove(scene.getObjectByName('light'+lampi));
+		makeLight(10+(lampi-1)*3,10,0,'light'+lampi);
+		
+	
+	}
 	new Lamp(lampi);
 
 }
