--- a/Meeting/MIDI.js-master/examples/violin14.html
+++ b/Meeting/MIDI.js-master/examples/violin14.html
@@ -1674,7 +1674,7 @@ function bpmLamp(){
 		//lampi=lampi%4;
 
 	}
-	if(lampi>0){
+	//if(lampi>0){
 		for(var i=1;i<=4;i++){
 			scene.remove(scene.getObjectByName('light'+i));
 		}
@@ -1683,8 +1683,8 @@ function bpmLamp(){
 		makeLight(13,10,0,'light'+light2);
 		makeLight(16,10,0,'light'+light3);
 		makeLight(19,10,0,'light'+light4);
-	}
-	new Lamp(lampi);
+	//}
+	Lamp(lampi);
 
 }
 window.onload = function () {
