--- a/Meeting/MIDI.js-master/examples/violin14.html
+++ b/Meeting/MIDI.js-master/examples/violin14.html
@@ -1131,7 +1131,7 @@ function init() {
 	bowB = makeBow();
 	//scene.add (bowB);
 	//////節拍器燈//////////////////////
-	var name1='light4';
+	//var name1='light4';
 	makeLight(10,10,0,'light1');
 	makeLight(13,10,0,'light2');
 	makeLight(16,10,0,'light3');
@@ -1604,7 +1604,7 @@ function bpmLamp(){
 		startClick1=false;
 		for(var i=1;i<=4;i++){
 			scene.remove(scene.getObjectByName('light'+i));
-			makeLight(10,10,0,'light'+i);
+			makeLight(10+(i-1)*3,10,0,'light'+i);
 		}
 		
 		//makeLight(13,10,0,'light'+light2);
@@ -1623,7 +1623,7 @@ function bpmLamp(){
 	}
 	for(var i=1;i<=4;i++){
 		scene.remove(scene.getObjectByName('light'+i));
-		makeLight(10,10,0,'light'+i);
+		makeLight(10+(i-1)*3,10,0,'light'+i);
 	}
 	
 	//makeLight(13,10,0,'light'+light2);
