--- a/Meeting/MIDI.js-master/examples/violin14.html
+++ b/Meeting/MIDI.js-master/examples/violin14.html
@@ -1604,12 +1604,12 @@ function bpmLamp(){
 		startClick1=false;
 		for(var i=1;i<=4;i++){
 			scene.remove(scene.getObjectByName('light'+i));
-			makeLight(10+(i-1)*3,10,0,'light'+i);
+			
 		}
-		
-		//makeLight(13,10,0,'light'+light2);
-		//makeLight(16,10,0,'light'+light3);
-		//makeLight(19,10,0,'light'+light4);
+		makeLight(10,10,0,'light1');
+		makeLight(13,10,0,'light2');
+		makeLight(16,10,0,'light3');
+		makeLight(19,10,0,'light4');
 	}
 
 	if(startClick){
@@ -1623,12 +1623,12 @@ function bpmLamp(){
 	}
 	for(var i=1;i<=4;i++){
 		scene.remove(scene.getObjectByName('light'+i));
-		makeLight(10+(i-1)*3,10,0,'light'+i);
+		
 	}
-	
-	//makeLight(13,10,0,'light'+light2);
-	//makeLight(16,10,0,'light'+light3);
-	//makeLight(19,10,0,'light'+light4);
+	makeLight(10,10,0,'light1');
+	makeLight(13,10,0,'light2');
+	makeLight(16,10,0,'light3');
+	makeLight(19,10,0,'light4');
 	
 	Lamp(lampi);
 
