--- a/Meeting/MIDI.js-master/examples/violin14.html
+++ b/Meeting/MIDI.js-master/examples/violin14.html
@@ -90,7 +90,7 @@ BPM <input id='tempo' type="range" min=30 max=210 value = 60><span id = "bpm">60
   <option value='ev8b'> 8b </option>
   <option value='ev9'> 9 </option>
   <option value='ev10'> 10 </option>
-
+  <option value='ev10'> green sleeves </option>
 </select>
 
 </div>
