--- a/Meeting/MIDI.js-master/examples/violin14.html
+++ b/Meeting/MIDI.js-master/examples/violin14.html
@@ -61,7 +61,7 @@
 <body>
 	<div id="info">
 		violin demo
-		<br> BPM <input id='tempo' type="range" min=30 max=210 value=6 0><span id="bpm">60</span><br>
+		<br> BPM <input id='tempo' type="range" min=30 max=210 value=60><span id="bpm">60</span><br>
 
 		<br>
 		<button id='start1'>Start</button>
