--- a/Meeting/MIDI.js-master/examples/violin15.html
+++ b/Meeting/MIDI.js-master/examples/violin15.html
@@ -1547,7 +1547,7 @@
 			//////////////////////////////////////////
 			var bpm1 = $('#tempo').val();
 			if(startClick1){
-				redLineDis=(8/bpm1);
+				redLineDis=(8/(bpm1/60));
 				
 				redLine.position.x+=redLineDis;
 			
