--- a/Meeting/MIDI.js-master/examples/violin15.html
+++ b/Meeting/MIDI.js-master/examples/violin15.html
@@ -1548,13 +1548,13 @@
 			var bpm1 = $('#tempo').val();
 			var move = clock.getElapsedTime() - startTime;
 			if(startClick1){
-				redLineDis=move/8/bpm1;
+				redLineDis=move/8*bpm1/60;
 				
 				redLine.position.x+=redLineDis;
 			
 			
 			}
-			cameraDis+=0.1;
+			//cameraDis+=0.1;
 
 			//cameraFront.position.x =cameraDis;
 
