--- a/Meeting/MIDI.js-master/examples/violin15.html
+++ b/Meeting/MIDI.js-master/examples/violin15.html
@@ -1548,9 +1548,9 @@
 			var bpm1 = $('#tempo').val();
 			var move = clock.getElapsedTime() - startTime;
 			if(startClick1){
-				redLineDis=move/8*bpm1/60;
+				redLineDis=move*8*bpm1/60;
 				
-				redLine.position.x+=redLineDis;
+				redLine.position.x=redLineDis;
 			
 			
 			}
