--- a/Meeting/MIDI.js-master/examples/violin16.html
+++ b/Meeting/MIDI.js-master/examples/violin16.html
@@ -1160,7 +1160,7 @@
 			ccdSys.axes.push(new ccdSys.CCD_axis(new THREE.Vector3(0, 1, 0), 0));
 			ccdSys.axes.push(new ccdSys.CCD_axis(new THREE.Vector3(0, 1, 0), 1, -0.1, 3.14));
 
-			bowB = makeBow();
+			//bowB = makeBow();
 			//scene.add (bowB);
 
 			//////節拍器燈//////////////////////
